--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
